--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,7 +23,7 @@
         <ion-toggle slot="end" (click)="switchClick(prise)"
           [(ngModel)]="prise.pris"></ion-toggle>
         <div style="height: calc(100% - 4px); width: 10px; border: 2px solid;
-          margin-right: 0.7em;"
+          margin-right: 0.7em; border-radius: 4px;"
           [ngStyle]="{'color': prise.event.color.primary, 'background-color':
           prise.event.color.secondary}"> </div>
         <ion-label>
