--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,7 +11,10 @@
   <ion-content class="ion-padding">
     <div id="CONTENT" style="min-height: 100%; width: 100%; display: flex;
       flex-direction: column; align-items: center; justify-content: center;">
-      <h1>Mon compte</h1>
+      <!-- <h1>Mon compte</h1> -->
+      <ion-button (click)="DELETE_ME()">
+        Send notification
+      </ion-button>
     </div>
   </ion-content>
 </div>
