Adding Network things

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,15 +14,17 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="ion-padding" *ngIf="checkStep('test')">
-    <div id="CONTENT" style="min-height: 100%; width: 100%; display: flex;
+
+  <ion-content class="ion-padding" *ngIf="checkStep('main')">
+    <!-- <div id="CONTENT" style="min-height: 100%; width: 100%; display: flex;
       flex-direction: column; align-items: center; justify-content: center;">
-      <!-- <h1>Mon compte</h1> -->
-      <ion-button (click)="DELETE_ME()">
-        TEST BUTTONS
-      </ion-button>
-    </div>
+      
+    </div> -->
+
+    Ok ... ?
+
   </ion-content>
+
 
   <!-- <ion-content class="ion-padding" *ngIf="checkStep('loading')">
     <div id="CONTENT" style="min-height: 100%; width: 100%; display: flex;
